# neural-souls

./: CMakeLists.txt  CMakeSettings.json  DSIII.cpp  DSIII.h  DSIIIDX.cpp  DSIIIDX.h  README.md  ScreenGrab11.cpp  ScreenGrab11.h  com_ptr.hpp  dllmain.cpp  logging.cpp  logging.h  vcpkg.json
